--- a/css/main.css
+++ b/css/main.css
@@ -1,11 +1,13 @@
-@media only screen and (min-width: 1441px) {
+@media only screen and (max-width: 1200px) {
   .footerGrid {
-    display: flex;
-    justify-content: space-between; } }
+    grid-template-columns: repeat(2, 1fr) !important;
+    grid-template-rows: repeat(2, 1fr) !important; } }
 
 @media only screen and (max-width: 575px) {
   .mapaG, .hide2 {
-    display: none; } }
+    display: none; }
+  .footerGrid {
+    grid-template-rows: 1fr !important; } }
 
 @media only screen and (max-width: 992px) {
   .hide1 {
@@ -93,7 +95,11 @@ main {
 
 .footerGrid {
   display: grid;
-  grid-template-columns: repeat(2, 1fr);
+  grid-template-columns: 2fr 1fr repeat(2, 1fr);
+  grid-template-rows: 1fr;
+  margin-top: 1rem;
+  padding: 3rem;
+  color: white;
   background-color: #ff4835;
   box-shadow: 0 0.2rem 1rem #9c9c9c; }
   .footerGrid .copy {
@@ -103,7 +109,7 @@ main {
     .footerGrid .sobreNosDiv h4 {
       padding-bottom: 1rem; }
     .footerGrid .sobreNosDiv #sobreNos {
-      max-width: 400px; }
+      max-width: 250px; }
   .footerGrid .contactInfo {
     display: block; }
   .footerGrid .linkRedes {
