--- a/scss/utilities/_variables.scss
+++ b/scss/utilities/_variables.scss
@@ -5,3 +5,5 @@ $color-hover: #ff6d5d;
 $border: 1px solid #dee2e6;
 
 $shadow: 0 0.2rem 1rem rgb(156, 156, 156);
+
+$shadow2: 2px 2px 5px rgb(63, 63, 63);
