--- a/css/main.css
+++ b/css/main.css
@@ -3,17 +3,29 @@
     grid-template-columns: repeat(2, 1fr) !important;
     grid-template-rows: repeat(2, 1fr) !important; } }
 
-@media only screen and (max-width: 575px) {
-  .mapaG, .hide2 {
-    display: none; }
-  .footerGrid {
-    grid-template-rows: 1fr !important; } }
-
 @media only screen and (max-width: 992px) {
   .hide1 {
     display: none; } }
 
-main .tendencias, main .recienAgregados {
+@media only screen and (max-width: 768px) {
+  .comicTituloPadre {
+    width: 500px; }
+    .comicTituloPadre .comicMain {
+      grid-template-columns: 1fr !important;
+      place-items: center; }
+      .comicTituloPadre .comicMain .cardDescripcion {
+        max-width: 360px; } }
+
+@media only screen and (max-width: 575px) {
+  .mapaG,
+  .hide2 {
+    display: none; }
+  .comicMain img {
+    width: 300px; }
+  .footerGrid {
+    grid-template-rows: 1fr !important; } }
+
+.tendencias, .recienAgregados {
   padding: 1.5rem;
   margin-top: 1rem; }
 
@@ -38,26 +50,27 @@ header {
 main {
   margin-top: 120px; }
   main .comicTituloPadre {
-    width: 700px;
+    max-width: 700px;
     border: 1px solid #dee2e6;
     padding-bottom: 1rem; }
     main .comicTituloPadre .comicTitulo {
       padding-top: 1rem;
       text-align: center; }
     main .comicTituloPadre .comicMain {
-      display: flex;
-      justify-content: center; }
+      display: grid;
+      grid-template-columns: repeat(2, 1fr); }
       main .comicTituloPadre .comicMain .cardTitleImg {
-        text-align: center;
         width: 400px;
         padding: 1rem; }
         main .comicTituloPadre .comicMain .cardTitleImg img {
           border-radius: 5px;
-          box-shadow: 2px 2px 5px #3f3f3f; }
+          box-shadow: 2px 2px 5px #3f3f3f;
+          width: 368px; }
       main .comicTituloPadre .comicMain .card-body .cardTitulo {
         font-size: 20px; }
       main .comicTituloPadre .comicMain .card-body .cardDescripcion {
-        max-width: 300px; }
+        max-width: 300px;
+        margin: auto; }
       main .comicTituloPadre .comicMain .card-body .cardLinks a {
         display: block;
         text-align: center; }
@@ -160,110 +173,125 @@ main {
           background-color: #ff6d5d; }
   main .formIframePersonajes {
     border-top: 1px solid #dee2e6; }
-  main .contenedorSobreNos {
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    grid-template-rows: repeat(2, 1fr);
+  main .sobreNosotros .sobreNosotrosPadre .contenedorSobreNos {
+    display: flex;
+    justify-content: space-evenly;
+    padding-bottom: 3rem;
     border-bottom: 1px solid #dee2e6; }
-    main .contenedorSobreNos .sobreNosUno {
-      padding: 3rem;
-      margin: 2rem 0px 200px 0px;
-      border: 1px solid #dee2e6;
-      border-radius: 10px;
-      background: white;
-      background: linear-gradient(313deg, white 0%, white 32%, #ffd4cf 87%); }
-      main .contenedorSobreNos .sobreNosUno h2 {
+    main .sobreNosotros .sobreNosotrosPadre .contenedorSobreNos .sobreNosUno {
+      padding: 3rem; }
+      main .sobreNosotros .sobreNosotrosPadre .contenedorSobreNos .sobreNosUno h1 {
+        font-size: 15px;
+        letter-spacing: 5px; }
+      main .sobreNosotros .sobreNosotrosPadre .contenedorSobreNos .sobreNosUno h2 {
         font-size: 30px; }
-      main .contenedorSobreNos .sobreNosUno p {
-        max-width: 500px; }
-      main .contenedorSobreNos .sobreNosUno span {
-        color: red; }
-      main .contenedorSobreNos .sobreNosUno #necesitasAyuda {
-        font-size: 20px; }
-    main .contenedorSobreNos .sedes {
-      display: flex;
-      justify-content: center;
-      flex-flow: column wrap;
-      align-items: center;
-      margin-top: 200px;
-      border: 1px solid #dee2e6;
-      border-radius: 10px;
-      background: white;
-      background: linear-gradient(146deg, white 0%, white 32%, #ffd4cf 87%); }
-    main .contenedorSobreNos .redesSobreNos {
-      display: flex;
-      justify-content: space-evenly;
-      align-items: center;
-      flex-flow: column wrap;
-      border: 1px solid #dee2e6;
-      margin-bottom: 200px;
-      border-radius: 10px; }
-      main .contenedorSobreNos .redesSobreNos .redesFlex {
-        display: grid;
-        grid-template-columns: repeat(3, 1fr);
-        grid-template-rows: repeat(2, 1fr);
-        gap: 5rem; }
-        main .contenedorSobreNos .redesSobreNos .redesFlex i {
-          font-size: 300%; }
-    main .contenedorSobreNos .preguntasFrecuentes {
+      main .sobreNosotros .sobreNosotrosPadre .contenedorSobreNos .sobreNosUno p {
+        max-width: 500px;
+        margin: 0px; }
+      main .sobreNosotros .sobreNosotrosPadre .contenedorSobreNos .sobreNosUno #necesitasAyuda {
+        font-size: 20px;
+        padding-bottom: 10px; }
+      main .sobreNosotros .sobreNosotrosPadre .contenedorSobreNos .sobreNosUno a {
+        border-radius: 5px;
+        background-color: #ff4835;
+        padding: 0.5rem 3rem;
+        color: white;
+        text-decoration: none; }
+        main .sobreNosotros .sobreNosotrosPadre .contenedorSobreNos .sobreNosUno a:hover {
+          background-color: #ff6d5d; }
+    main .sobreNosotros .sobreNosotrosPadre .contenedorSobreNos .preguntasFrecuentes {
       border: 1px solid #dee2e6;
       margin-top: 200px;
       padding: 1rem;
       border-radius: 10px; }
-      main .contenedorSobreNos .preguntasFrecuentes h2 {
+      main .sobreNosotros .sobreNosotrosPadre .contenedorSobreNos .preguntasFrecuentes h2 {
         margin: 0rem 0rem 1rem 0rem; }
-      main .contenedorSobreNos .preguntasFrecuentes div {
+      main .sobreNosotros .sobreNosotrosPadre .contenedorSobreNos .preguntasFrecuentes div {
         border-bottom: 1px solid #dee2e6;
         border-top: 1px solid #dee2e6;
         padding: 1rem; }
-  main .demo {
-    width: 100%;
-    margin: auto; }
-    main .demo .item {
-      padding-bottom: 60px;
-      border-bottom: 1px solid #dee2e6; }
-      main .demo .item ul {
-        list-style: none outside none;
-        padding-left: 0;
-        margin: 0; }
-        main .demo .item ul li {
-          text-align: center;
-          color: black; }
-          main .demo .item ul li img {
-            border-radius: 5px; }
-  main h1,
-  main h2 {
-    font-size: 26px; }
-  main .tendencias {
-    border-bottom: 1px solid #dee2e6; }
-    main .tendencias .tendencias1,
-    main .tendencias .tendencias2 {
+  main .sobreNosotros .sobreNosotrosPadre .sobreNosDosPadre {
+    padding: 1rem 0rem 3rem 0rem;
+    border: 1px solid #dee2e6; }
+    main .sobreNosotros .sobreNosotrosPadre .sobreNosDosPadre .tituloSobreNosDos {
+      text-align: center;
+      padding: 1rem; }
+    main .sobreNosotros .sobreNosotrosPadre .sobreNosDosPadre .sobreNosDos {
       display: flex;
-      justify-content: center; }
-    main .tendencias img:hover {
-      transform: scale(102%);
-      transition: 0.3s; }
-  main .recienAgregados .recienAgregados1,
-  main .recienAgregados .recienAgregados2 {
-    display: flex;
-    justify-content: center; }
-  main .recienAgregados img:hover {
-    transform: scale(102%);
-    transition: 0.3s; }
-  main .instrucciones {
-    background-color: #ff4835;
-    padding: 4rem;
-    box-shadow: 0 0.2rem 1rem #9c9c9c; }
-  main .formIframe {
+      justify-content: space-evenly; }
+      main .sobreNosotros .sobreNosotrosPadre .sobreNosDosPadre .sobreNosDos .ofrecemos {
+        background-color: red;
+        padding: 1rem; }
+        main .sobreNosotros .sobreNosotrosPadre .sobreNosDosPadre .sobreNosDos .ofrecemos h3 {
+          font-size: x; }
+        main .sobreNosotros .sobreNosotrosPadre .sobreNosDosPadre .sobreNosDos .ofrecemos p {
+          max-width: 300px; }
+  main .sobreNosotros .sobreNosotrosPadreDos {
     display: flex;
     justify-content: space-evenly;
-    flex-flow: row wrap;
-    align-items: center; }
-    main .formIframe .btn-primary {
-      background-color: #ff4835;
-      border-color: #ff4835; }
-      main .formIframe .btn-primary:hover {
-        background-color: #ff6d5d; }
+    padding: 2rem;
+    border-bottom: 1px solid #dee2e6; }
+    main .sobreNosotros .sobreNosotrosPadreDos .redesSociales .iconsRedes {
+      text-align: center;
+      font-size: 2rem;
+      padding-top: 1rem; }
+    main .sobreNosotros .sobreNosotrosPadreDos .semiContacto p {
+      max-width: 400px; }
+
+.demo {
+  width: 100%;
+  margin: auto; }
+  .demo .item {
+    padding-bottom: 60px;
+    border-bottom: 1px solid #dee2e6; }
+    .demo .item ul {
+      list-style: none outside none;
+      padding-left: 0;
+      margin: 0; }
+      .demo .item ul li {
+        text-align: center;
+        color: black; }
+        .demo .item ul li img {
+          border-radius: 5px; }
+
+h1,
+h2 {
+  font-size: 26px; }
+
+.tendencias {
+  border-bottom: 1px solid #dee2e6; }
+  .tendencias .tendencias1,
+  .tendencias .tendencias2 {
+    display: flex;
+    justify-content: center; }
+  .tendencias img:hover {
+    transform: scale(102%);
+    transition: 0.3s; }
+
+.recienAgregados .recienAgregados1,
+.recienAgregados .recienAgregados2 {
+  display: flex;
+  justify-content: center; }
+
+.recienAgregados img:hover {
+  transform: scale(102%);
+  transition: 0.3s; }
+
+.instrucciones {
+  background-color: #ff4835;
+  padding: 4rem;
+  box-shadow: 0 0.2rem 1rem #9c9c9c; }
+
+.formIframe {
+  display: flex;
+  justify-content: space-evenly;
+  flex-flow: row wrap;
+  align-items: center; }
+  .formIframe .btn-primary {
+    background-color: #ff4835;
+    border-color: #ff4835; }
+    .formIframe .btn-primary:hover {
+      background-color: #ff6d5d; }
 
 .botonesSiguiente {
   text-align: center; }
