--- a/scss/utilities/_mediaqueries.scss
+++ b/scss/utilities/_mediaqueries.scss
@@ -5,17 +5,38 @@
     }
 }
 
-@media only screen and (max-width: 575px) {
-    .mapaG, .hide2 {
-        display: none;
-    }
-    .footerGrid {
-        grid-template-rows: 1fr !important;
-    }
-}
-
 @media only screen and (max-width: 992px) {
     .hide1 {
         display: none;
+    }
+}
+
+@media only screen and (max-width: 768px) {
+    .comicTituloPadre {
+        width: 500px;
+
+        .comicMain {
+            grid-template-columns: 1fr !important;
+            place-items: center;
+
+            .cardDescripcion {
+                max-width: 360px;
+            }
+        }
+    }
+}
+
+@media only screen and (max-width: 575px) {
+    .mapaG,
+    .hide2 {
+        display: none;
+    }
+    .comicMain {
+        img {
+            width: 300px;
+        }
+    }
+    .footerGrid {
+        grid-template-rows: 1fr !important;
     }
 }
